--- a/package.json
+++ b/package.json
@@ -12,14 +12,21 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "~11.2.0",
+    "@angular/cdk": "^11.2.0",
     "@angular/common": "~11.2.0",
     "@angular/compiler": "~11.2.0",
     "@angular/core": "~11.2.0",
     "@angular/forms": "~11.2.0",
+    "@angular/material": "^11.2.0",
     "@angular/platform-browser": "~11.2.0",
     "@angular/platform-browser-dynamic": "~11.2.0",
     "@angular/router": "~11.2.0",
+    "bootstrap": "^4.6.0",
+    "bootswatch": "^4.6.0",
+    "jquery": "^3.5.1",
     "rxjs": "~6.6.0",
+    "sweetalert2": "^10.14.1",
+    "swiper": "^6.4.11",
     "tslib": "^2.0.0",
     "zone.js": "~0.11.3"
   },
